--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       }
     ],
     "prettier/prettier": "error",
+    "@typescript-eslint/camelcase": "off",
     "class-methods-use-this": "off"
   },
   "settings": {
