--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,13 @@
     ],
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
   },
   "settings": {
     "import/resolver": {
