--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,13 @@
+
 {
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
-    "plugin:@typescript-eslint/recommended",
     "airbnb-base",
+    "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
@@ -23,22 +25,32 @@
     "prettier"
   ],
   "rules": {
+    "no-underscore-dangle": "off",
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off",
+    "@typescript-eslint/camelcase": "off",
+    "camelcase":"off",
+    "no-useless-constructor": "off",
+    "import/no-duplicates": "off",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "_"
+    }],
+    "@typescript-eslint/naming-convention": ["error", {
+      "selector": "interface",
+      "format": ["PascalCase"],
+      "custom": {
+        "regex": "^I[A-Z]",
+        "match": true
+        }
+      }
+      ],
     "import/extensions": [
       "error",
       "ignorePackages",
       {
         "ts": "never"
       }
-    ],
-    "prettier/prettier": "error",
-    "@typescript-eslint/camelcase": "off",
-    "class-methods-use-this": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "_"
-      }
-    ],
+    ]
   },
   "settings": {
     "import/resolver": {
